--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello world!
+<!doctype html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ура, Новый год! Ура, сессия!</title>
+</head>
+<body>
+<div id="inputContainer">
+    <label for="verificationCode">Проверочный код:</label>
+    <input type="text" id="verificationCode">
+    <input type="button" id="submitButton">
+</div>
+<div id="resultMessage"></div>
+</body>
+</html>
