Functionality test 2 (fixed styles)

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Ура, Новый год! Ура, сессия!</title>
 </head>
 <body>
 <div id="inputContainer">
     <label for="verificationCode">Проверочный код:</label>
     <input type="text" id="verificationCode">
-    <input type="button" id="submitButton">
+    <button id="submitButton">Проверить</button>
 </div>
 <div id="resultMessage"></div>
 </body>
