Functionality test 2 (fixed scripts)

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <button id="submitButton">Проверить</button>
 </div>
 <div id="resultMessage"></div>
+<script src="index.js"></script>
 </body>
 </html>
