Working test solution (without final text)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Ура, Новый год! Ура, сессия!</title>
 </head>
 <body>
-<div id="inputContainer">
-    <label for="verificationCode">Проверочный код:</label>
-    <input type="text" id="verificationCode">
-    <button id="submitButton">Проверить</button>
-</div>
+<div class="inputContainer">
+    <label for="verificationCode">Проверочный код:</label><br>
+    <input type="text" id="verificationCode"><br>
+    <button id="submitButton">Получить доступ</button>
+</div><br>
 <div id="resultMessage"></div>
 <script src="index.js"></script>
 </body>
