--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Ура, Новый год! Ура, сессия!</title>
+    <title>Vitaliy L.'s home page</title>
 </head>
 <body>
 <div class="inputContainer">
