--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -43,5 +43,6 @@
 <p>95% работы за нас будет выполнять классический виндовый Калькулятор. Нам нужен тру-"Программист" калькулятор и
     битовая клавиатура. Заодно можно поменять QWORD на DWORD, чтобы случайно не зацепить лишние биты:</p>
 <img src="calc.png" alt="Калькулятор Windows"/>
+<p>Тут очень удобно считать, сколько битов маски нужно для N подсетей или наоборот, сколько битов нужно оставить для N хостов. :)</p>
 </body>
 </html>
