first part update + partial ipv4 add

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -10,30 +10,34 @@
 </head>
 <body>
 <h1>Домашка по подсетям</h1>
-<p>Вообще, читать всё это имеет смысл только для понимания темы, ибо сами задачи решить можно с помощью миллионов
-    онлайн-калькуляторов ¯\_(ツ)_/¯</p>
+<p>Большинство текста здесь &ndash; на понимание, а не только на быстрое решение. Можно пробежаться по примерам и решить
+    аналогично, но я бы советовал понимать, что происходит, чтобы потом не отвечать на лабе по полчаса ¯\_(ツ)_/¯</p>
 <h2>Часть 1. IPv6</h2>
 <p>Тут самое сложное &ndash; как-нибудь понять, что 1 байт это два символа, а один символ это 4 бита. То есть, когда
     пишут "байты
-    10-9 &ndash; номер группы", то это 4 символа: <code>60017 &longrightarrow; EA71</code>.</p>
+    10-9 &ndash; номер группы", то это 4 символа: <code>60017 &ndash;&gt; EA71</code>.</p>
 <p>Пока что предполагаем, что байты считаются справа налево, т.е. 16-11 байты это самые левые. По документу по ссылке
     это <code>2001:DB8</code> и еще один ноль, потому что адрес из документа на 4 байта, а занять этим нужно 6.</p>
 <p>Первые пять букв имени переводятся в шестнадцатеричные значения ASCII <a href="http://www.asciitable.com/"
                                                                             target="_blank">вот
     здесь</a>, получается ровно 5 байт. Передаю привет тем, у кого имя короче пяти букв &ndash; придётся дописать в
     конце по два нуля за каждую недостающую букву.</p>
-<p>Адрес нужно не забыть сократить, это значит убрать ненужные нули (<code>0DB8 &longrightarrow; DB8</code>,
-    <code>0000 &longrightarrow; 0</code>) и все нули в конце заменить на <code>::</code>. Префикс сети (циферка в конце)
+<p>Адрес нужно не забыть сократить, это значит убрать ненужные нули (<code>0DB8 &ndash;&gt; DB8</code>,
+    <code>0000 &ndash;&gt; 0</code>) и все нули в конце заменить на <code>::</code>. Префикс сети (циферка в конце)
     получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104. И даже если имя короче, то всё равно 104, по условию
     эти байты всё равно заняты полем "имя".</p>
 <p>Готовый сокращённый адрес (<span class="network">адрес из документа</span>, <span
         class="subnet">номер группы</span>, <span class="host">имя</span>):</p>
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
     /104</code>
+<p>Расположение байтов из условия задачи в этом адресе:</p>
+<code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span class="host">8,7:6,5:4</span>,3::
+    /104</code>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
-    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104-5 = 99. Адрес первой сети равен адресу выше, а
+    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104-5 = 99. Адрес первой сети равен адресу выше (но уже
+    с новым префиксом), а
     последней считается путём добавления всех пяти единичек после всего того, что написали изначально, переводя по пути
-    в символы, естественно. Здесь будет два символа &ndash; 1111 &longrightarrow; F и 1000 &longrightarrow; 8 (нулями
+    в символы, естественно. Здесь будет два символа &ndash; 1111 &ndash;&gt; F и 1000 &ndash;&gt; 8 (нулями
     добивается в конце, а не как обычно в начале, потому что мы тут не математику считаем, а делим адреса на две
     половинки).</p>
 <p>Готовый адрес последней сети:</p>
@@ -41,8 +45,53 @@
 <h2>Часть 2. IPv4</h2>
 <h3>calc.exe</h3>
 <p>95% работы за нас будет выполнять классический виндовый Калькулятор. Нам нужен тру-"Программист" калькулятор и
-    битовая клавиатура. Заодно можно поменять QWORD на DWORD, чтобы случайно не зацепить лишние биты:</p>
+    битовая клавиатура. Заодно можно поменять QWORD на DWORD, всё равно нам не пригодится больше восьми байт:</p>
 <img src="calc.png" alt="Калькулятор Windows"/>
-<p>Тут очень удобно считать, сколько битов маски нужно для N подсетей или наоборот, сколько битов нужно оставить для N хостов. :)</p>
+<p>Остальные 5% работы &ndash; навыки быстро переводить числа из двоичной в десятичную системы счисления и
+    наоборот. Эти переводы я расписывать не буду, т.к. это и очень долго, и, я надеюсь, всем понятно, и можно сделать с
+    помощью того же Калькулятора. Главное &ndash; не переводить весь адрес целиком, т.к. 16 единиц подряд для
+    калькулятора это не 255.255, а 65535 :)</p>
+<h3>Исходная сеть</h3>
+<p>Посчитать x0 (в примере 10) и x1 (в примере 96) для получения исходной сети &ndash; несложно, должны получиться числа
+    от 0 до 255. Эту сеть и её
+    маску (/12, значит, 12 первых бит маски = 1) зачем-то просят записать в начале каждого задания, но ведь проще
+    записать
+    её сразу:</p>
+<code>Исходный адрес 10.96.0.0<br>
+    Адрес <span class="network">00001010.0110</span>0000.00000000.00000000<br>
+    Маска <span class="network">11111111.1111</span>0000.00000000.00000000</code>
+<p>Сразу выделим неизменную часть <span class="network">красным</span>: первые 12 бит &ndash; это адрес исходной сети,
+    их трогать во всех последующих заданиях <strong>не будем</strong>.</p>
+<h3>2.1. Разбить сеть на N подсетей</h3>
+<p>Для того, чтобы найти новую маску подсети, нужно найти такую степень двойки x, что 2^x &ge; N.
+    Например, если нужно 25 подсетей, то ближайшая степень двойки &ndash; 5: 2^5 = 32.</p>
+<p>Более наглядно это можно сделать, набивая единицы в Калькуляторе справа налево до тех пор, пока значение не станет
+    равным N-1 (не забываем, что счёт начинается с нуля):</p>
+<img src="subnets.png" alt="Считаем подсети в Калькуляторе"/>
+<p>Ровно столько единиц, сколько получилась степень двойки или сколько натыкали в Калькуляторе, нужно добавить к
+    исходной маске подсети. Часть адреса и маски, относящаяся к подсетям, будет выделена <span
+            class="subnet">синим</span>.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span>0000000.00000000<br>
+    Маска <span class="network">11111111.1111</span><span class="subnet">1111.1</span>0000000.00000000</code>
+<p>Префикс каждой подсети будет, как обычно, равен количеству единиц в маске, в данном случае 12 исходных + 5 подсети =
+    /17.</p>
+<p>В задании требуют указать, сколько битов заимствовали и из каких октетов. Не знаю, в чём суть данного вопроса, но
+    напишем что забрали x (5) бит и из каких октетов по счёту (справа налево): 2 и 3.</p>
+<p>В каждой такой подсети будет по 2^y узлов и по 2^y - 2 <strong>активных</strong> узлов, где y = 32 - префикс = кол-во
+    оставшихся нулевых бит в маске. В данном случае y = 32-17 = 15, всего узлов 32768, активных узлов 32766.</p>
+<p>Активные узлы &ndash; это общее число узлов минус адрес самой сети и broadcast-адрес (адрес рассылки на все узлы в
+    подсети), то есть по сути, сколько реальных устройств может быть в такой подсети.</p>
+<h3>2.2. Разбить сеть на подсети, в каждой из которых N узлов</h3>
+<p>Количество бит, необходимое для N узлов, считается точно так же, как и для N подсетей: степень двойки 2^x &ge; N или
+    набиванием единиц в калькуляторе. Например, для 128 узлов x = 7: 2^7 = 128. Тот же пример в Калькуляторе:</p>
+<img src="hosts1.png" alt="Считаем узлы в Калькуляторе"/>
+<p>Небольшое отличие, если дано количество <strong>активных</strong> узлов: 2^x должно быть на 2 больше, чем N: 2^x - 2
+    &ge; N, а в Калькуляторе нужно добивать до значения N+1. Например, для 62 активных узлов x = 6, т.к. 2^6 - 2 = 62.
+    Тот же пример в Калькуляторе:</p>
+<img src="hosts2.png" alt="Считаем активные узлы в Калькуляторе"/>
+<p>Итак, продолжаем по первому примеру: для 128 узлов нужно 7 бит. Тогда маска подсети будет состоять из всех единиц,
+    кроме 7 последних бит. Хост-биты будут выделены <span class="host">зелёным.</span></p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.00000000.0</span><span class="host">0000000</span><br>
+    Маска <span class="network">11111111.1111</span><span class="subnet">1111.11111111.1</span><span class="host">0000000</span></code>
 </body>
 </html>
