--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -31,8 +31,7 @@
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
     /104</code>
 <p>Расположение байтов из условия задачи в этом адресе:</p>
-<code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span class="host">8,7:6,5:4</span>,3::
-    /104</code>
+<code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span class="host">8,7:6,5:4</span>,3::</code>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
     Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104-5 = 99. Адрес первой сети равен адресу выше (но уже
     с новым префиксом), а
