--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -31,7 +31,8 @@
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
     /104</code>
 <p>Расположение байтов из условия задачи в этом адресе:</p>
-<code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span class="host">8,7:6,5:4</span>,3::</code>
+<code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span
+        class="host">8,7:6,5:4</span>,3::</code>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
     Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104-5 = 99. Адрес первой сети равен адресу выше (но уже
     с новым префиксом), а
@@ -41,26 +42,30 @@
     половинки).</p>
 <p>Готовый адрес последней сети:</p>
 <code><span class="network">2001:DB8:0:EA71:5649:5441:4C</span><span class="host">F8</span>:: /99</code>
+
 <h2>Часть 2. IPv4</h2>
+
 <h3>calc.exe</h3>
 <p>95% работы за нас будет выполнять классический виндовый Калькулятор. Нам нужен тру-"Программист" калькулятор и
-    битовая клавиатура. Заодно можно поменять QWORD на DWORD, всё равно нам не пригодится больше восьми байт:</p>
+    битовая клавиатура. Заодно можно поменять QWORD на DWORD, всё равно больше восьми байт не пригодится:</p>
 <img src="calc.png" alt="Калькулятор Windows"/>
 <p>Остальные 5% работы &ndash; навыки быстро переводить числа из двоичной в десятичную системы счисления и
     наоборот. Эти переводы я расписывать не буду, т.к. это и очень долго, и, я надеюсь, всем понятно, и можно сделать с
     помощью того же Калькулятора. Главное &ndash; не переводить весь адрес целиком, т.к. 16 единиц подряд для
     калькулятора это не 255.255, а 65535 :)</p>
+
 <h3>Исходная сеть</h3>
 <p>Посчитать x0 (в примере 10) и x1 (в примере 96) для получения исходной сети &ndash; несложно, должны получиться числа
     от 0 до 255. Эту сеть и её
     маску (/12, значит, 12 первых бит маски = 1) зачем-то просят записать в начале каждого задания, но ведь проще
     записать
     её сразу:</p>
-<code>Исходный адрес 10.96.0.0<br>
+<code>Десятичный адрес 10.96.0.0<br>
     Адрес <span class="network">00001010.0110</span>0000.00000000.00000000<br>
     Маска <span class="network">11111111.1111</span>0000.00000000.00000000</code>
 <p>Сразу выделим неизменную часть <span class="network">красным</span>: первые 12 бит &ndash; это адрес исходной сети,
     их трогать во всех последующих заданиях <strong>не будем</strong>.</p>
+
 <h3>2.1. Разбить сеть на N подсетей</h3>
 <p>Для того, чтобы найти новую маску подсети, нужно найти такую степень двойки x, что 2^x &ge; N.
     Например, если нужно 25 подсетей, то ближайшая степень двойки &ndash; 5: 2^5 = 32.</p>
@@ -80,17 +85,84 @@
     оставшихся нулевых бит в маске. В данном случае y = 32-17 = 15, всего узлов 32768, активных узлов 32766.</p>
 <p>Активные узлы &ndash; это общее число узлов минус адрес самой сети и broadcast-адрес (адрес рассылки на все узлы в
     подсети), то есть по сути, сколько реальных устройств может быть в такой подсети.</p>
+
 <h3>2.2. Разбить сеть на подсети, в каждой из которых N узлов</h3>
 <p>Количество бит, необходимое для N узлов, считается точно так же, как и для N подсетей: степень двойки 2^x &ge; N или
-    набиванием единиц в калькуляторе. Например, для 128 узлов x = 7: 2^7 = 128. Тот же пример в Калькуляторе:</p>
+    набиванием единиц в Калькуляторе. Например, для 128 узлов x = 7: 2^7 = 128. Тот же пример в Калькуляторе:</p>
 <img src="hosts1.png" alt="Считаем узлы в Калькуляторе"/>
 <p>Небольшое отличие, если дано количество <strong>активных</strong> узлов: 2^x должно быть на 2 больше, чем N: 2^x - 2
     &ge; N, а в Калькуляторе нужно добивать до значения N+1. Например, для 62 активных узлов x = 6, т.к. 2^6 - 2 = 62.
     Тот же пример в Калькуляторе:</p>
 <img src="hosts2.png" alt="Считаем активные узлы в Калькуляторе"/>
-<p>Итак, продолжаем по первому примеру: для 128 узлов нужно 7 бит. Тогда маска подсети будет состоять из всех единиц,
+<p>Продолжаем по первому примеру: для 128 узлов нужно 7 бит. Тогда маска подсети будет состоять из всех единиц,
     кроме 7 последних бит. Хост-биты будут выделены <span class="host">зелёным.</span></p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.00000000.0</span><span class="host">0000000</span><br>
     Маска <span class="network">11111111.1111</span><span class="subnet">1111.11111111.1</span><span class="host">0000000</span></code>
+<p>Префикс подсети, соответственно, равен 32 - 7 = /25.</p>
+<p>Количество подсетей равно 2^y, где y - количество бит, выделенное на адрес подсети, т.е. 32 - 12 исходных - 7 узловых
+    = 13. Тогда подсетей будет 2^13 = 8192.</p>
+<p>Почему для активных узлов делается -2 и в чём их отличие от узлов в целом, см. конец пункта 2.1.</p>
+
+<h3>Указать первую, последнюю, N-ую,... подсеть</h3>
+<p>Для примера возьмём сеть из п. 2.1. Ещё раз: <span class="network">красные</span> биты никогда не трогаем, <span
+        class="subnet">синие</span> биты &ndash; подсети, <span class="host">зелёные</span> биты &ndash; хосты.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span><br>
+    Маска <span class="network">11111111.1111</span><span class="subnet">1111.1</span><span class="host">0000000.00000000</span></code>
+<p>Для того, чтобы указать первую подсеть, все синие биты нужно установить в нули:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span><br>
+    Десятичный адрес 10.96.0.0</code>
+<p>Последняя подсеть, соответственно, когда все синие биты &ndash; единицы.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.1</span><span class="host">0000000.00000000</span><br>
+    Десятичный адрес 10.111.128.0</code>
+<p>В задании 2.1.2 нужно указать также и адрес N-й подсети. В этом случае синими битами устанавливается двоичное
+    значение N-1 (поскольку, опять же, счёт начинается с нуля). Например, для N = 25-1 = 24), в двоичной &ndash;
+    11100:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1100.0</span><span class="host">0000000.00000000</span><br>
+    Десятичный адрес 10.108.0.0</code>
+<p>Первые пять или последние пять сетей считаются по тому же принципу. Первые пять: все синие нули, затем
+    ..001, ..010, ..011, ..100, последние пять (с конца в начало для наглядности): все синие единицы,
+    затем ..110, ..101, ..100, ..011.</p>
+
+<h3>Адрес сети, первого и последнего узла, широковещательный адрес</h3>
+<p>В качестве примера &ndash; всё та же сеть из п. 2.1, её первая подсеть. И ещё раз про биты: <span class="network">красные</span> биты
+    никогда не трогаем, <span
+            class="subnet">синие</span> биты &ndash; подсети, <span class="host">зелёные</span> биты &ndash; хосты.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span><br>
+    Маска <span class="network">11111111.1111</span><span class="subnet">1111.1</span><span class="host">0000000.00000000</span></code>
+<p>Адрес сети &ndash; все зелёные биты установлены в нули плюс префикс сети в конце:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span>
+    /17<br>
+    Десятичный адрес 10.96.0.0 /17</code>
+<p>Адрес первого узла &ndash; зелёные биты образуют значение 1, т.е., все нули, а последний &ndash; единица:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000001</span><br>
+    Десятичный адрес 10.96.0.1</code>
+<p>Адрес последнего узла можно получить вычитанием единицы из максимального числа, представляемым зелёными битами, т.е.
+    всеми единицами. В общем случае, это установка всех зелёных бит, кроме последнего, в единицу.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">1111111.11111110</span><br>
+    Десятичный адрес 10.96.127.254</code>
+<p>Широковещательный адрес, соответственно, когда все зелёные биты &ndash; единицы.</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">1111111.11111111</span><br>
+    Десятичный адрес 10.96.127.255</code>
+
+<h3>Комбо</h3>
+<p>Пример указания конкретной подсети + всех нужных адресов. Исходная сеть:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.00000000.00</span><span class="host">000000</span><br>
+    Маска <span class="network">11111111.1111</span><span class="subnet">1111.11111111.11</span><span class="host">000000</span></code>
+<p>Адрес последней подсети:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">000000</span><br>
+    Десятичный адрес 10.111.255.192 /26</code>
+<p>Адрес первого узла этой подсети:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">000001</span><br>
+    Десятичный адрес 10.111.255.193</code>
+<p>Адрес последнего узла этой подсети:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">111110</span><br>
+    Десятичный адрес 10.111.255.254</code>
+<p>Широковещательный этой подсети:</p>
+<code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">111111</span><br>
+    Десятичный адрес 10.111.255.255</code>
+
+<h2>Часть 3. Поддержать автора</h2>
+<button id="donateButton">Donate</button>
+<script src="index.js"></script>
 </body>
 </html>
