--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -24,8 +24,9 @@
     конце по два нуля за каждую недостающую букву.</p>
 <p>Адрес нужно не забыть сократить, это значит убрать ненужные нули (<code>0DB8 &ndash;&gt; DB8</code>,
     <code>0000 &ndash;&gt; 0</code>) и все нули в конце заменить на <code>::</code>. Префикс сети (циферка в конце)
-    получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104. И даже если имя короче, то всё равно 104, по условию
-    эти байты всё равно заняты полем "имя".</p>
+    получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104. И даже если имя короче, то всё равно 104, потому что
+    если пустые места в имени останутся вне маски, то изменение этих пустых мест сломает имя, если потом попытаться его
+    прочесть из какого-нибудь получившегося адреса.</p>
 <p>Готовый сокращённый адрес (<span class="network">адрес из документа</span>, <span
         class="subnet">номер группы</span>, <span class="host">имя</span>):</p>
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
@@ -34,14 +35,14 @@
 <code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span
         class="host">8,7:6,5:4</span>,3::</code>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
-    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104-5 = 99. Адрес первой сети равен адресу выше (но уже
+    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104+5 = 109. Адрес первой сети равен адресу выше (но уже
     с новым префиксом), а
     последней считается путём добавления всех пяти единичек после всего того, что написали изначально, переводя по пути
     в символы, естественно. Здесь будет два символа &ndash; 1111 &ndash;&gt; F и 1000 &ndash;&gt; 8 (нулями
     добивается в конце, а не как обычно в начале, потому что мы тут не математику считаем, а делим адреса на две
     половинки).</p>
 <p>Готовый адрес последней сети:</p>
-<code><span class="network">2001:DB8:0:EA71:5649:5441:4C</span><span class="host">F8</span>:: /99</code>
+<code><span class="network">2001:DB8:0:EA71:5649:5441:4C</span><span class="host">F8</span>:: /109</code>
 
 <h2>Часть 2. IPv4</h2>
 
@@ -124,7 +125,8 @@
     затем ..110, ..101, ..100, ..011.</p>
 
 <h3>Адрес сети, первого и последнего узла, широковещательный адрес</h3>
-<p>В качестве примера &ndash; всё та же сеть из п. 2.1, её первая подсеть. И ещё раз про биты: <span class="network">красные</span> биты
+<p>В качестве примера &ndash; всё та же сеть из п. 2.1, её первая подсеть. И ещё раз про биты: <span class="network">красные</span>
+    биты
     никогда не трогаем, <span
             class="subnet">синие</span> биты &ndash; подсети, <span class="host">зелёные</span> биты &ndash; хосты.</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span><br>
