--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -13,6 +13,7 @@
 <p>Большинство текста здесь &ndash; на понимание, а не только на быстрое решение. Можно пробежаться по примерам и решить
     аналогично, но я бы советовал понимать, что происходит, чтобы потом не отвечать на лабе по полчаса ¯\_(ツ)_/¯</p>
 <h2>Часть 1. IPv6</h2>
+<h3>IPv6-адрес из группы и имени</h3>
 <p>Тут самое сложное &ndash; как-нибудь понять, что 1 байт это два символа, а один символ это 4 бита. То есть, когда
     пишут "байты
     10-9 &ndash; номер группы", то это 4 символа: <code>60017 &ndash;&gt; EA71</code>.</p>
@@ -27,6 +28,11 @@
     получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104. И даже если имя короче, то всё равно 104, потому что
     если пустые места в имени останутся вне маски, то изменение этих пустых мест сломает имя, если потом попытаться его
     прочесть из какого-нибудь получившегося адреса.</p>
+<p><em>Насчёт маски в /104:</em> некоторым при проверке написали, мол, наоборот, в последней букве имени есть в конце
+    нолики, и поэтому эти нолики в маску добавлять не нужно. Я пока что не уверен, правильно ли это технически, т.к.
+    если имя в адрес записывается для того, чтобы его можно было потом прочесть, то такой подход не прокатит &ndash;
+    последняя буква имени будет сломана при разделении на подсети. Я спрошу преподавателя об этом на лабе, но пока что
+    нет ответа на вопрос, надо ли так делать.</p>
 <p>Готовый сокращённый адрес (<span class="network">адрес из документа</span>, <span
         class="subnet">номер группы</span>, <span class="host">имя</span>):</p>
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
@@ -34,6 +40,7 @@
 <p>Расположение байтов из условия задачи в этом адресе:</p>
 <code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span
         class="host">8,7:6,5:4</span>,3::</code>
+<h3>Разделить IPv6-сеть на подсети</h3>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
     Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104+5 = 109. Адрес первой сети равен адресу выше (но уже
     с новым префиксом), а
