Cisco ip-hometask release 2.0 ipv6 task fixed

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -15,41 +15,34 @@
 <h2>Часть 1. IPv6</h2>
 <h3>IPv6-адрес из группы и имени</h3>
 <p>Тут самое сложное &ndash; как-нибудь понять, что 1 байт это два символа, а один символ это 4 бита. То есть, когда
-    пишут "байты
-    10-9 &ndash; номер группы", то это 4 символа: <code>60017 &ndash;&gt; EA71</code>.</p>
+    пишут "байты 10-9 &ndash; номер группы", то это 4 символа: <code>60017 &ndash;&gt; EA71</code>.</p>
 <p>Пока что предполагаем, что байты считаются справа налево, т.е. 16-11 байты это самые левые. По документу по ссылке
     это <code>2001:DB8</code> и еще один ноль, потому что адрес из документа на 4 байта, а занять этим нужно 6.</p>
-<p>Первые пять букв имени переводятся в шестнадцатеричные значения ASCII <a href="http://www.asciitable.com/"
-                                                                            target="_blank">вот
+<p>Первые пять букв имени переводятся в шестнадцатеричные значения ASCII <a href="http://www.asciitable.com/" target="_blank">вот
     здесь</a>, получается ровно 5 байт. Передаю привет тем, у кого имя короче пяти букв &ndash; придётся дописать в
     конце по два нуля за каждую недостающую букву.</p>
 <p>Адрес нужно не забыть сократить, это значит убрать ненужные нули (<code>0DB8 &ndash;&gt; DB8</code>,
     <code>0000 &ndash;&gt; 0</code>) и все нули в конце заменить на <code>::</code>. Префикс сети (циферка в конце)
-    получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104. И даже если имя короче, то всё равно 104, потому что
-    если пустые места в имени останутся вне маски, то изменение этих пустых мест сломает имя, если потом попытаться его
-    прочесть из какого-нибудь получившегося адреса.</p>
-<p><em>Насчёт маски в /104:</em> некоторым при проверке написали, мол, наоборот, в последней букве имени есть в конце
-    нолики, и поэтому эти нолики в маску добавлять не нужно. Я пока что не уверен, правильно ли это технически, т.к.
-    если имя в адрес записывается для того, чтобы его можно было потом прочесть, то такой подход не прокатит &ndash;
-    последняя буква имени будет сломана при разделении на подсети. Я спрошу преподавателя об этом на лабе, но пока что
-    нет ответа на вопрос, надо ли так делать.</p>
+    получается равным 8 бит &middot; 13 байт (с 16 по 4) = 104 минус количество нулей в конце последней (пятой) буквы.
+    Например, последняя буква L, её код 4C, в конце остаётся два нуля, значит префикс сети 104 - 2 = 102.</p>
+<img src="ipv6letter.png" alt="Код последней буквы"/>
 <p>Готовый сокращённый адрес (<span class="network">адрес из документа</span>, <span
         class="subnet">номер группы</span>, <span class="host">имя</span>):</p>
 <code><span class="network">2001:DB8:0</span>:<span class="subnet">EA71</span>:<span class="host">5649:5441:4C</span>00::
-    /104</code>
+    /102</code>
 <p>Расположение байтов из условия задачи в этом адресе:</p>
 <code><span class="network">16,15:14,13:12,11</span>:<span class="subnet">10,9</span>:<span
         class="host">8,7:6,5:4</span>,3::</code>
 <h3>Разделить IPv6-сеть на подсети</h3>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
-    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 104+5 = 109. Адрес первой сети равен адресу выше (но уже
-    с новым префиксом), а
+    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 102 + 5 - 2 (то же число нулей в конце последней буквы имени, что и в первой части) = 105.
+    Адрес первой сети равен адресу выше (но уже с новым префиксом), а
     последней считается путём добавления всех пяти единичек после всего того, что написали изначально, переводя по пути
-    в символы, естественно. Здесь будет два символа &ndash; 1111 &ndash;&gt; F и 1000 &ndash;&gt; 8 (нулями
+    в символы, естественно. Здесь будет два символа &ndash; 1111 &ndash;&gt; F (добавили 2 единицы к С [1100]) и 1110 &ndash;&gt; E (нулями
     добивается в конце, а не как обычно в начале, потому что мы тут не математику считаем, а делим адреса на две
     половинки).</p>
 <p>Готовый адрес последней сети:</p>
-<code><span class="network">2001:DB8:0:EA71:5649:5441:4C</span><span class="host">F8</span>:: /109</code>
+<code><span class="network">2001:DB8:0:EA71:5649:5441:4</span><span class="host">FE</span>:: /105</code>
 
 <h2>Часть 2. IPv4</h2>
 
@@ -133,8 +126,7 @@
 
 <h3>Адрес сети, первого и последнего узла, широковещательный адрес</h3>
 <p>В качестве примера &ndash; всё та же сеть из п. 2.1, её первая подсеть. И ещё раз про биты: <span class="network">красные</span>
-    биты
-    никогда не трогаем, <span
+    биты никогда не трогаем, <span
             class="subnet">синие</span> биты &ndash; подсети, <span class="host">зелёные</span> биты &ndash; хосты.</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">0000.0</span><span class="host">0000000.00000000</span><br>
     Маска <span class="network">11111111.1111</span><span class="subnet">1111.1</span><span class="host">0000000.00000000</span></code>
