Cisco ip-hometask release 2.1 100% guarantee text added

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -12,6 +12,7 @@
 <h1>Домашка по подсетям</h1>
 <p>Большинство текста здесь &ndash; на понимание, а не только на быстрое решение. Можно пробежаться по примерам и решить
     аналогично, но я бы советовал понимать, что происходит, чтобы потом не отвечать на лабе по полчаса ¯\_(ツ)_/¯</p>
+<p>Правильность решений гарантирована &ndash; у меня более 100 баллов.</p>
 <h2>Часть 1. IPv6</h2>
 <h3>IPv6-адрес из группы и имени</h3>
 <p>Тут самое сложное &ndash; как-нибудь понять, что 1 байт это два символа, а один символ это 4 бита. То есть, когда
@@ -152,13 +153,13 @@
 <p>Адрес последней подсети:</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">000000</span><br>
     Десятичный адрес 10.111.255.192 /26</code>
-<p>Адрес первого узла этой подсети:</p>
+<p>Адрес первого узла последней подсети:</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">000001</span><br>
     Десятичный адрес 10.111.255.193</code>
-<p>Адрес последнего узла этой подсети:</p>
+<p>Адрес последнего узла последней подсети:</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">111110</span><br>
     Десятичный адрес 10.111.255.254</code>
-<p>Широковещательный этой подсети:</p>
+<p>Широковещательный адрес последней подсети:</p>
 <code>Адрес <span class="network">00001010.0110</span><span class="subnet">1111.11111111.11</span><span class="host">111111</span><br>
     Десятичный адрес 10.111.255.255</code>
 
