Cisco ip-hometask release 2.1 100% guarantee text added

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -12,7 +12,7 @@
 <h1>Домашка по подсетям</h1>
 <p>Большинство текста здесь &ndash; на понимание, а не только на быстрое решение. Можно пробежаться по примерам и решить
     аналогично, но я бы советовал понимать, что происходит, чтобы потом не отвечать на лабе по полчаса ¯\_(ツ)_/¯</p>
-<p>Правильность решений гарантирована &ndash; у меня более 100 баллов.</p>
+<p>Правильность решений гарантирована &ndash; у меня более 100 баллов за эту работу.</p>
 <h2>Часть 1. IPv6</h2>
 <h3>IPv6-адрес из группы и имени</h3>
 <p>Тут самое сложное &ndash; как-нибудь понять, что 1 байт это два символа, а один символ это 4 бита. То есть, когда
