Cisco ip-hometask release 2.1 supporters added

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -166,5 +166,10 @@
 <h2>Часть 3. Поддержать автора</h2>
 <button id="donateButton">Donate</button>
 <script src="index.js"></script>
+<p>Уже поддержали:</p>
+<ul>
+    <li>Аноним &ndash; 150 ₽
+    <li>Аноним &ndash; 700 ₽
+</ul>
 </body>
 </html>
