--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -36,14 +36,14 @@
         class="host">8,7:6,5:4</span>,3::</code>
 <h3>Разделить IPv6-сеть на подсети</h3>
 <p>Чтобы разбить её на подсети, нужно посчитать, сколько бит (и в итоге символов) нужно для заданного числа сеток.
-    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 102 + 5 - 2 (то же число нулей в конце последней буквы имени, что и в первой части) = 105.
+    Например, 32 сети это 5 бит (2^5 = 32), значит префикс сети 102 + 5 = 107.
     Адрес первой сети равен адресу выше (но уже с новым префиксом), а
     последней считается путём добавления всех пяти единичек после всего того, что написали изначально, переводя по пути
     в символы, естественно. Здесь будет два символа &ndash; 1111 &ndash;&gt; F (добавили 2 единицы к С [1100]) и 1110 &ndash;&gt; E (нулями
     добивается в конце, а не как обычно в начале, потому что мы тут не математику считаем, а делим адреса на две
     половинки).</p>
 <p>Готовый адрес последней сети:</p>
-<code><span class="network">2001:DB8:0:EA71:5649:5441:4</span><span class="host">FE</span>:: /105</code>
+<code><span class="network">2001:DB8:0:EA71:5649:5441:4</span><span class="host">FE</span>:: /107</code>
 
 <h2>Часть 2. IPv4</h2>
 
@@ -165,11 +165,11 @@
 
 <h2>Часть 3. Поддержать автора</h2>
 <button id="donateButton">Donate</button>
-<script src="index.js"></script>
 <p>Уже поддержали:</p>
 <ul>
     <li>Аноним &ndash; 150 ₽
     <li>Аноним &ndash; 700 ₽
 </ul>
+<script src="index.js"></script>
 </body>
 </html>
