Schematechnics pages added, css unified

--- a/cisco/ip-hometask/index.html
+++ b/cisco/ip-hometask/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Домашка по подсетям</title>
-    <link rel="stylesheet" href="../cisco.css">
+    <link rel="stylesheet" href="../../page.css">
 </head>
 <body>
 <h1>Домашка по подсетям</h1>
