Schematechnics minor fixes

--- a/schematechnics/hometask/schemas.html
+++ b/schematechnics/hometask/schemas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../page.css">
 </head>
 <body>
-<h1>Готовые схемы:</h1>
+<h1>Готовые схемы</h1>
 <ul>
     <li>Сумматор 16-разрядный с входным и выходным переносом</li>
     <li>Сумматор-вычитатель 8-разрядный с входным и выходным переносом</li>
@@ -51,6 +51,6 @@
 <h2>Контакты</h2>
 <p>VK: <a href="https://vk.com/loshvitalik">/loshvitalik</a></p>
 <p>Telegram: @loshvitalik</p>
-<h2><a href="index.html">Вернуться назад</a></h2>
+<h2><a href="/schematechnics/hometask">Вернуться назад</a></h2>
 </body>
 </html>
