--- a/schematechnics/labs/index.html
+++ b/schematechnics/labs/index.html
@@ -12,6 +12,6 @@
 <h2>Контакты</h2>
 <p>VK: <a href="https://vk.com/loshvitalik">/loshvitalik</a></p>
 <p>Telegram: @loshvitalik</p>
-<h2><a href="../index.html">Вернуться назад</a></h2>
+<h2><a href="/schematechnics">Вернуться назад</a></h2>
 </body>
 </html>
