Schematechnics labs added, start page added

--- a/schematechnics/labs/index.html
+++ b/schematechnics/labs/index.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="../../page.css">
 </head>
 <body>
+<h1>Лабораторные работы</h1>
+<p>Лабы сами по себе достаточно простые, можно делать их всей группой и сдавать один и тот же отчёт.</p>
+<p>В принципе, если есть какие-то вопросы по ним, например, если интересно разобраться или не можешь сдать, то могу
+    проконсультировать. Ценник чисто символический, от бесплатного до символической пачки обнимашек или сотки.</p>
+<h2>Известные вопросы и доп. инфа по лабам:</h2>
+<ul>
+    <li>1 лаба: как работают базовые операции, в частности, исключающее ИЛИ (сложение по модулю 2, когда сумма делится
+        на 2 то он выдает 0)
+    </li>
+    <li>2 лаба: законы бинарной алгебры (1+1=1, 1*0=0 и т.д.), как сокращаются логические выражения. Определить,
+        является ли выражение СДНФ (в выражении должны быть все переменные и по одному разу в каждом умножении) или СКНФ
+        (в выражении должны быть все переменные и по одному разу в каждом сложении)
+    </li>
+    <li>3 лаба: как увеличить разрядность какого-либо элемента. Сумматоры &ndash; просто добавить рядом ещё, соединив
+        переносы по цепочке, остальные &ndash; каскадом, см. лекцию 2. Для чего нужен в жизни дешифратор &ndash;
+        например, для адресации всяких чипов. Может попросить сделать мультиплексор или сумматор на базовых элементах
+    </li>
+    <li>4 лаба: если JK триггер такой универсальный, почему его не используют везде &ndash; потому что он сложный и
+        медленный (состоит из двух RS и одного Т триггера). Сам RS триггер не задействует в схеме загруженности
+        триггеры, потому что он собран только на базовой логике. Блок Antitinkling делать не нужно
+    </li>
+    <li>5 лаба: для чего в жизни нужны регистры &ndash; для хранения данных. Может попросить сделать блок регистров
+        общего назначения (просто набор параллельных регистров)
+    </li>
+    <li>6 лаба: как изменить модуль счёта счётчика. Умный ответ &ndash; переделать схему гашения. Простой ответ &ndash;
+        поставить на выходе этой схемы такой "И", чтобы на его входах получилось нужное число, и прицепить его на сброс
+        счётчика
+    </li>
+</ul>
+<h2>Готовые лабы</h2>
+<p>Могу скинуть все 6 лаб с отчётами, если совсем лень/одногруппники не делятся/пропустил все дедлайны. Цена &ndash; 500
+    ₽.</p>
 <h2>Контакты</h2>
 <p>VK: <a href="https://vk.com/loshvitalik">/loshvitalik</a></p>
 <p>Telegram: @loshvitalik</p>
