XOR cipher page added, simple encoding working

--- a/schematechnics/hometask/schemas.html
+++ b/schematechnics/hometask/schemas.html
@@ -16,6 +16,8 @@
     <li>Сумматор-вычитатель 8-разрядный с входным и выходным переносом, параллельным регистром для сохранения результата
         и входом записи
     </li>
+    <li>5-разрядный счётчик с модулем счёта 30</li>
+    <li>8-разрядный счётчик с произвольным модулем счёта и заданием начального значения</li>
     <li>16-разрядный счётчик с произвольным модулем счёта</li>
     <li>Демультиплексор 1 байт x 12 байт</li>
     <li>Шифратор 32х5 с входом Chip Select</li>
@@ -29,18 +31,25 @@
     <li>Логическое устройство (4 операции) 16-разрядное с входами выбора операции, Chip Select, параллельным регистром
         для сохранения результата и входом записи
     </li>
-    <li>Мультиплексор 8 байт х 1 байт с входом Chip Select</li>
-    <li>Мультиплексор 64х1 с дешифратором 3х8 для старших разрядов и мультиплексорами 3х8 для младших разрядов и с
+    <li>Мультиплексор 32х1 с дешифратором 2х4 для старших разрядов и мультиплексорами 8х1 для младших разрядов
+    </li>
+    <li>Мультиплексор 64х1 с дешифратором 3х8 для старших разрядов и мультиплексорами 8х1 для младших разрядов и с
         входом Chip Select
     </li>
+    <li>Мультиплексор 8 байт х 1 байт с входом Chip Select</li>
+    <li>Мультиплексор 4 байт х 1 байт на основе дешифраторов с входом Chip Select</li>
     <li>Параллельный регистр 16-разрядный с двунаправленной шиной данных и входом чтения/записи</li>
     <li>Параллельный регистр 32-разрядный с двунаправленной шиной данных, входами чтения/записи и Chip Select</li>
-    <li>Набор из 4 параллельных регистров по 8 разрядов с дешифратором адреса, двунаправленной шиной данных, входами
+    <li>Набор из 4 параллельных регистров по 8 разрядов с дешифратором адреса, входами
+        адреса регистра, чтения и записи
+    </li>
+    <li>Набор из 8 параллельных регистров по 8 разрядов с дешифратором адреса, двунаправленной шиной данных, входами
         адреса регистра, чтения и записи
     </li>
     <li>Набор из 4 параллельных регистров по 16 разрядов с дешифратором адреса, двунаправленной шиной данных, входами
         адреса регистра, тактового сигнала и чтения/записи
     </li>
+    <li>JK-триггер, T-триггер, D-триггер, дешифратор 3х8 на простых логических элементах</li>
     <li>Логическое устройство для АЛУ, устанавливающее флаги (AC, C, N, O, Z) результата с входами результата и
         переноса, параллельным регистром для сохранения результата и флагов и двунаправленной шиной данных
     </li>
