XOR cipher final version

--- a/security/xor-cipher/index.html
+++ b/security/xor-cipher/index.html
@@ -30,7 +30,7 @@
 </div>
 <div class="button-group">
     <button id="e-generate">Сгенерировать набор</button>
-    <button id="e-save">Сохранить ключи</button>
+    <button id="e-save">Сохранить в файл</button>
     <button id="e-encrypt">Зашифровать текст</button>
     <button id="e-decrypt">Расшифровать текст</button>
 </div>
