Added teambuilding invite

--- a/teambuilding/invite/index.html
+++ b/teambuilding/invite/index.html
@@ -32,7 +32,7 @@
         </li>
         <li style="opacity: 0.5;">🙃 Хиханьки и хаханьки (но это не точно)</li>
         <li style="opacity: 0.25;">💄 Два Золотых Яблока и один Рив Гош</li>
-        <li style="opacity: 0.05;">🏡 Экскурсия по столице Свердловской области &ndash; г. Берёзовский</li>
+        <li style="opacity: 0.03;">🏡 Экскурсия по столице Свердловской области &ndash; г. Берёзовский</li>
         <li style="opacity: 0.0;">И т.д.</li>
     </ul>
     <h2>Кто организует?</h2>
@@ -53,7 +53,7 @@
     <p>Трансфер до места проживания включён в программу</p>
     <h2>Ну как, ты согласна?</h2>
     <div class="buttons-container" id="invite-buttons-container">
-        <button onclick="onButtonClick('Да')">да!</button>
+        <a href="https://t.me/loshvitalik" target="_blank" class="instagram-link"><button onclick="onButtonClick('Да')">да!</button></a>
         <button onclick="onButtonClick('Нет')">не</button>
         <button onclick="onButtonClick('Я подумаю')">я подумаю</button>
         <button onclick="onButtonClick('🐾')" id="invite-pawprints-button">🐾</button>
