--- a/teambuilding/s/invite/index.html
+++ b/teambuilding/s/invite/index.html
@@ -42,7 +42,7 @@
     <p>Екатеринбург, самый центр города, 20 минут от твоего дома</p>
     <h2>Ну шо, идёшь?</h2>
     <div class="buttons-container" id="invite-buttons-container">
-        <button onclick="onButtonClick('Да')">ага</button>
+        <a href="https://t.me/loshvitalik" target="_blank" class="instagram-link"><button onclick="onButtonClick('Да')">ага</button></a>
         <button onclick="onButtonClick('Нет')">не</button>
         <button onclick="onButtonClick('Я подумаю')">я подумаю</button>
     </div>
